Aligned to make sure that the delete button is still inline at the smallest viewport

--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -67,7 +67,7 @@
 
 .itemname {
 	display: inline-block;
-	width:74%;
+	width:71%;
 }
 
 .itemcost {
